--- a/index.html
+++ b/index.html
@@ -10,142 +10,144 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/logo_place_header.svg" class="header__logo" alt="Логотип"> 
+        <img src="./images/logo_place_header.svg" class="logo-place-header" alt="Логотип"> 
         <h1 class="header__title">Научиться учиться</h1>
-        <p class="header__subtitle-paragraph">Какие современные и эффективные
-          подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать-></a>
+        <p class="header__subtitle">Какие современные и эффективные
+          подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a>
         </p>
-        <img class="header__ilustration" src="images/header-image.png" alt="Опять двойка">
+        <img class="header__main-ilustration" src="images/header-image.png" alt="Опять двойка">
         <div class="header__square-pic">
         </div>
       </header>
       <main class="content">
         <section class="description">
-          <div class="two-colums">
-            <h2 class="two-colums-brief">Главные проблемы в обучении</h2>
-          </div>
-          <div class="description__main-text">
-            <p class="description__main-text-paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
-            </p>
-            <p class="description__main-text-paragraph"><span class="span-accent">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
-            </p>
-            <p class="description__main-text-paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
-            </p>
+          <div class="two-columns">
+            <h2 class="two-columns__brief-h2">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
+              </p>
+              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+              </p>
+              <p class="two-columns__paragraph:last-of-type">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+              </p>
+            </div>
           </div>
         </section>
         <section class="digits">
-          <h3 class="digits__title section-title">Цифры и факты</h3>
+          <h2 class="section-title">Цифры и факты</h2>
           <p class="section-subtitle">Про учёбу и мозг</p>
           <div class="table">
-            <div class="table-cell">
+            <div class="table__cell">
               <div class="table__heading">86 миллиардов</div>
               <div class="table__text">Число нейронов в мозге человека</div>
             </div>
-            <div class="table-cell">
+            <div class="table__cell">
               <div class="table__heading">2,1 миллиарда</div>
               <div class="table__text">Число нуждающихся в повышении квалификации</div>
-              <div class="table__text-margin">Всемирный Банк, 2017</div>
+              <div>Всемирный Банк, 2017</div>
             </div>
-            <div class="table-cell">
+            <div class="table__cell">
               <div class="table__heading">1000 терабайт</div>
               <div class="table__text">Объём памяти человека</div>
             </div>
-            <div class="table-cell">
+            <div class="table__cell">
               <div class="table__heading">500 триллионовов</div>
               <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
             </div>
-            <div class="table-cell">
+            <div class="table__cell">
               <div class="table__heading">420 миллионов</div>
               <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства</div>
-              <div class="table__text-margin">Всемирный Банк, 2017</div>
+              <div>Всемирный Банк, 2017</div>
             </div>
-            <div class="table-cell">
+            <div class="table__cell">
               <div class="table__heading">17-20 лет</div>
               <div class="table__text">Пик обучаемости</div>
             </div>
-            <div class="table-cell">
+            <div class="table__cell">
               <div class="table__heading">1885 год</div>
               <div class="table__text">Открытие кривой забывания</div>
             </div>
-            <div class="table-cell">
+            <div class="table__cell">
               <div class="table__heading">1889 год</div>
               <div class="table__text">Открытие условного рефлекса</div>
             </div>
           </div>
         </section>
         <section class="feynman">
-          <h4 class="feynman__title">Метод Фейнмана</h4>
-          <h5 class="feynman__subtitle">Выучить и не забыть.</h5>
-          <a class="feynman__link" href="#">Подробнее -></a>
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a class="feynman__link" href="#">Подробнее &rarr;</a>
           <img class="feynman__image" src="./images/feynman.png" alt="Ричард Фенман">
         </section>
         <section class="kaufman">
           <div class="kaufman__triangle"></div>
-          <h6 class="kaufman__theme-dark">Принципы обучения</h6>
-          <h6 class="kaufman__subtitle-theme-dark">От Джоша Кауфмана</h6>
-          <div class="table-theme-dark">
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">1</div>
-              <div class="table-theme-dark__text ">Выберите привлекательный проект.</div>
+          <h2 class="section-title-theme-dark">Принципы обучения</h2>
+          <p class="section-subtitle-theme-dark">От Джоша Кауфмана</p>
+          <div class="table table_theme-dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading-theme-dark">1</h3>
+              <p class="table__text-theme-dark">Выберите привлекательный проект.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">2</div>
-              <div class="table-theme-dark__text">Сосредоточьтесь на каком-то одном навыке.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">2</h3>
+              <p class="table__text-theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">3</div>
-              <div class="table-theme-dark__text">Определите целевой уровень мастерства.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">3</h3>
+              <p class="table__text-theme-dark">Определите целевой уровень мастерства.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">4</div>
-              <div class="table-theme-dark__text">Разбейте навык на элементы.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">4</h3>
+              <p class="table__text-theme-dark">Разбейте навык на элементы.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">5</div>
-              <div class="table-theme-dark__text">Приготовьте всё необходимое для занятий.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">5</h3>
+              <p class="table__text-theme-dark">Приготовьте всё необходимое для занятий.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">6</div>
-              <div class="table-theme-dark__text">Устраните препятствия для занятий.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">6</h3>
+              <p class="table__text-theme-dark">Устраните препятствия для занятий.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">7</div>
-              <div class="table-theme-dark__text">Выделите специальное время для занятий.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">7</h3>
+              <p class="table__text-theme-dark">Выделите специальное время для занятий.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">8</div>
-              <div class="table-theme-dark__text">Создайте быстрые петли обратной связи.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">8</h3>
+              <p class="table__text-theme-dark">Создайте быстрые петли обратной связи.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">9</div>
-              <div class="table-theme-dark__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">9</h3>
+              <p class="table__text-theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div>
-            <div class="table-theme-dark__cell">
-              <div class="table-theme-dark__heading">10</div>
-              <div class="table-theme-dark__text">Уделяйте внимание количеству и скорости.</div>
+            <div class="table__cell-theme-dark">
+              <h3 class="table__heading-theme-dark">10</h3>
+              <p class="table__text-theme-dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column-content-copyright">
-            <img src="./images/logo_place_footer.svg" class="logo footer__place-logo" alt="Логотип">
+          <div class="footer__column footer__column_content_copyright">
+            <img src="./images/logo_place_footer.svg" class="logo logo_place_footer" alt="Логотип">
             <p class="footer__author">&copy; Александр Гаврилов</p>
           </div>
-          <div class="footer__column-content-info">
-            <h6 class="footer__column-heading">О Практикуме</h6>
+          <div class="footer__column footer__column_content_info">
+            <h2 class="footer__column-heading">О Практикуме</h2>
             <nav class="footer__column-links"> 
               <a class="footer__columns-link" href="#">Главная</a>
               <a class="footer__columns-link" href="#">Концепция</a>
               <a class="footer__columns-link" href="#">Наставники</a>
             </nav>
           </div>
-          <div class="footer__column-content-social">
-            <h6 class="footer__column-heading">Соцсети</h6>
-            <a href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Лого Фэйсбук">Facebook</a>
-            <a href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Лого ВКонтакте">ВКонтакте</a>
-            <a href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Лого Инстаграм">Instagram</a>
+          <div class="footer__column footer__column_content_social">
+            <h2 class="footer__column-heading">Соцсети</h2>
+            <nav class="footer__column-links">
+              <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Лого Фэйсбук">Facebook</a>
+              <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Лого ВКонтакте">ВКонтакте</a>
+              <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Лого Инстаграм">Instagram</a>
+            </nav>
           </div>
         </div>
       </footer>
