--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
   </head>
   <body>
     <div class="page">
-      <header class="header">
-        <img src="./images/logo_place_header.svg" class="logo-place-header" alt="Логотип"> 
+      <header class="header ">
+        <img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="Логотип"> 
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные
           подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a>
         </p>
-        <img class="header__main-ilustration" src="images/header-image.png" alt="Опять двойка">
+        <img class="header__main-ilustration" src="./images/header-image.png" alt="Опять двойка">
         <div class="header__square-pic">
         </div>
       </header>
       <main class="content">
         <section class="description">
           <div class="two-columns">
-            <h2 class="two-columns__brief-h2">Главные проблемы в обучении</h2>
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.
               </p>
               <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод</span>: учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
               </p>
-              <p class="two-columns__paragraph:last-of-type">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
+              <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.
               </p>
             </div>
           </div>
@@ -38,38 +38,38 @@
           <p class="section-subtitle">Про учёбу и мозг</p>
           <div class="table">
             <div class="table__cell">
-              <div class="table__heading">86 миллиардов</div>
-              <div class="table__text">Число нейронов в мозге человека</div>
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">2,1 миллиарда</div>
-              <div class="table__text">Число нуждающихся в повышении квалификации</div>
-              <div>Всемирный Банк, 2017</div>
+              <h3 class="table__heading">2,1 миллиарда</h3>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">1000 терабайт</div>
-              <div class="table__text">Объём памяти человека</div>
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">500 триллионовов</div>
-              <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+              <h3 class="table__heading">500 триллионовов</h3>
+              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">420 миллионов</div>
-              <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства</div>
-              <div>Всемирный Банк, 2017</div>
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образование для трудоустройства</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">17-20 лет</div>
-              <div class="table__text">Пик обучаемости</div>
+              <h3 class="table__heading">17-20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">1885 год</div>
-              <div class="table__text">Открытие кривой забывания</div>
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
             </div>
             <div class="table__cell">
-              <div class="table__heading">1889 год</div>
-              <div class="table__text">Открытие условного рефлекса</div>
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
             </div>
           </div>
         </section>
@@ -81,48 +81,48 @@
         </section>
         <section class="kaufman">
           <div class="kaufman__triangle"></div>
-          <h2 class="section-title-theme-dark">Принципы обучения</h2>
-          <p class="section-subtitle-theme-dark">От Джоша Кауфмана</p>
-          <div class="table table_theme-dark">
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <p class="section-subtitle section-subtitle_theme_dark">От Джоша Кауфмана</p>
+          <div class="table table_theme_dark">
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading-theme-dark">1</h3>
-              <p class="table__text-theme-dark">Выберите привлекательный проект.</p>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">2</h3>
-              <p class="table__text-theme-dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">3</h3>
-              <p class="table__text-theme-dark">Определите целевой уровень мастерства.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">4</h3>
-              <p class="table__text-theme-dark">Разбейте навык на элементы.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">5</h3>
-              <p class="table__text-theme-dark">Приготовьте всё необходимое для занятий.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">6</h3>
-              <p class="table__text-theme-dark">Устраните препятствия для занятий.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">7</h3>
-              <p class="table__text-theme-dark">Выделите специальное время для занятий.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">8</h3>
-              <p class="table__text-theme-dark">Создайте быстрые петли обратной связи.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">9</h3>
-              <p class="table__text-theme-dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div>
-            <div class="table__cell-theme-dark">
-              <h3 class="table__heading-theme-dark">10</h3>
-              <p class="table__text-theme-dark">Уделяйте внимание количеству и скорости.</p>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
         </section>
@@ -136,9 +136,9 @@
           <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
             <nav class="footer__column-links"> 
-              <a class="footer__columns-link" href="#">Главная</a>
-              <a class="footer__columns-link" href="#">Концепция</a>
-              <a class="footer__columns-link" href="#">Наставники</a>
+              <a class="footer__column-link" href="#">Главная</a>
+              <a class="footer__column-link" href="#">Концепция</a>
+              <a class="footer__column-link" href="#">Наставники</a>
             </nav>
           </div>
           <div class="footer__column footer__column_content_social">
