--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="page">
       <header class="header ">
-        <img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="Логотип"> 
+        <img src="./images/logo_place_header.svg" class="logo logo_place_header" alt="Логотип">
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные
           подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a>
@@ -32,6 +32,58 @@
               </p>
             </div>
           </div>
+        </section>
+        <section class="techniques">
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
+          <div class="cards">
+            <div class="cards__item">
+              <img src="images/cards-attention.png" class="cards__images" alt="Книга"></img>
+              <h2 class="cards__title">Два вида внимания</h2>
+              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            </div>
+            <div class="cards__item">
+              <img src="images/cards-recall.png" class="cards__images" alt="Статуя"></img>
+              <h2 class="cards__title">Recall</h2>
+              <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+            </div>
+            <div class="cards__item">
+              <img src="images/cards-interliving.png" class="cards__images" alt="Интерливинг"></img>
+              <h2 class="cards__title">Интерливинг</h2>
+              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            </div>
+            <div class="cards__item">
+              <img src="images/cards-question.png" class="cards__images" alt="Вопросы"></img>
+              <h2 class="cards__title">Вопросы</h2>
+              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            </div>
+            <div class="cards__item">
+              <img src="images/cards-competence.png" class="cards__images" alt="Книги"></img>
+              <h2 class="cards__title">Иллюзия компетентности</h2>
+              <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            </div>
+          </div>
+        </section>
+        <section class="video">
+          <h2 class="section-title">Видео на TED</h2>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+          <div class="video__iframes">
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+        </section>
+        <section class="oakley">
+          <div class="two-columns">
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.</p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a class="feynman__link" href="#">Подробнее &rarr;</a>
+          <img class="feynman__image" src="./images/feynman.png" alt="Ричард Фенман">
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -73,11 +125,18 @@
             </div>
           </div>
         </section>
-        <section class="feynman">
-          <h2 class="feynman__title">Метод Фейнмана</h2>
-          <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a class="feynman__link" href="#">Подробнее &rarr;</a>
-          <img class="feynman__image" src="./images/feynman.png" alt="Ричард Фенман">
+        <section class="khan">
+          <div class="khan__container">
+            <p class="khan__author">Салмар Хан</p>
+            <h2 class="khan__title">Весь мир - школа</h2>
+            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            <p class="khan__quote-author">Джордж Лукас</p>
+            <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img src="images/khan-book.jpg" class="khan__book-pic" alt="Книга"></img>
+            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+          </div>
+          </div>
         </section>
         <section class="kaufman">
           <div class="kaufman__triangle"></div>
@@ -126,6 +185,16 @@
             </div>
           </div>
         </section>
+        <section class="resources">
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+          <div class="resources__logo-zone">
+            <a href="#"><img src="images/logo/resources-arzamas.svg" class="resources__link"></img></a>
+            <a href="#"><img src="images/logo/resources-n1.svg" class="resources__link"></img></a>
+            <a href="#"><img src="images/logo/resources-strelka.svg" class="resources__link"></img></a>
+            <a href="#"><img src="images/logo/resources-polka.svg" class="resources__link"></img></a>
+          </div>
+        </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
@@ -135,7 +204,7 @@
           </div>
           <div class="footer__column footer__column_content_info">
             <h2 class="footer__column-heading">О Практикуме</h2>
-            <nav class="footer__column-links"> 
+            <nav class="footer__column-links">
               <a class="footer__column-link" href="#">Главная</a>
               <a class="footer__column-link" href="#">Концепция</a>
               <a class="footer__column-link" href="#">Наставники</a>
