--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <link href="./styles/normalize.css" rel="stylesheet">
-    <link href="./styles/style.css" rel="stylesheet">
+    <link href="./styles/index.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
@@ -38,27 +38,27 @@
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <div class="cards">
             <div class="cards__item">
-              <img src="images/cards-attention.png" class="cards__images" alt="Книга"></img>
+              <img src="images/cards-attention.png" class="cards__images" alt="Книга">
               <h2 class="cards__title">Два вида внимания</h2>
               <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
             </div>
             <div class="cards__item">
-              <img src="images/cards-recall.png" class="cards__images" alt="Статуя"></img>
+              <img src="images/cards-recall.png" class="cards__images" alt="Статуя">
               <h2 class="cards__title">Recall</h2>
               <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
             </div>
             <div class="cards__item">
-              <img src="images/cards-interliving.png" class="cards__images" alt="Интерливинг"></img>
+              <img src="images/cards-interliving.png" class="cards__images" alt="Интерливинг">
               <h2 class="cards__title">Интерливинг</h2>
               <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
             </div>
             <div class="cards__item">
-              <img src="images/cards-question.png" class="cards__images" alt="Вопросы"></img>
+              <img src="images/cards-question.png" class="cards__images" alt="Вопросы">
               <h2 class="cards__title">Вопросы</h2>
               <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
             </div>
             <div class="cards__item">
-              <img src="images/cards-competence.png" class="cards__images" alt="Книги"></img>
+              <img src="images/cards-competence.png" class="cards__images" alt="Книги">
               <h2 class="cards__title">Иллюзия компетентности</h2>
               <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
             </div>
@@ -68,8 +68,9 @@
           <h2 class="section-title">Видео на TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+          </div>
         </section>
         <section class="oakley">
           <div class="two-columns">
@@ -133,7 +134,7 @@
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img src="images/khan-book.jpg" class="khan__book-pic" alt="Книга"></img>
+            <img src="images/khan-book.jpg" class="khan__book-pic" alt="Книга">
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
           </div>
@@ -189,10 +190,10 @@
           <h2 class="section-title">Полезные ресурсы</h2>
           <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
           <div class="resources__logo-zone">
-            <a href="#"><img src="images/logo/resources-arzamas.svg" class="resources__link"></img></a>
-            <a href="#"><img src="images/logo/resources-n1.svg" class="resources__link"></img></a>
-            <a href="#"><img src="images/logo/resources-strelka.svg" class="resources__link"></img></a>
-            <a href="#"><img src="images/logo/resources-polka.svg" class="resources__link"></img></a>
+            <a href="#"><img src="images/logo/resources-arzamas.svg" class="resources__link" alt="Арзамас"></a>
+            <a href="#"><img src="images/logo/resources-n1.svg" class="resources__link" alt="Н+1"></a>
+            <a href="#"><img src="images/logo/resources-strelka.svg" class="resources__link" alt="Стрелка"></a>
+            <a href="#"><img src="images/logo/resources-polka.svg" class="resources__link" alt="Полка"></a>
           </div>
         </section>
       </main>
