--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link href="./styles/normalize.css" rel="stylesheet">
-    <link href="./styles/index.css" rel="stylesheet">
+    <link href="./pages/index.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
@@ -16,7 +15,7 @@
           подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать &rarr;</a>
         </p>
         <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
-        <div class="header__square-pic">
+        <div class="rotation header__square-pic">
         </div>
       </header>
       <main class="content">
@@ -39,27 +38,27 @@
           <div class="cards">
             <div class="cards__item">
               <img src="images/cards-attention.png" class="cards__images" alt="Книга">
-              <h2 class="cards__title">Два вида внимания</h2>
+              <h3 class="cards__title">Два вида внимания</h3>
               <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
             </div>
             <div class="cards__item">
               <img src="images/cards-recall.png" class="cards__images" alt="Статуя">
-              <h2 class="cards__title">Recall</h2>
+              <h3 class="cards__title">Recall</h3>
               <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
             </div>
             <div class="cards__item">
               <img src="images/cards-interliving.png" class="cards__images" alt="Интерливинг">
-              <h2 class="cards__title">Интерливинг</h2>
+              <h3 class="cards__title">Интерливинг</h3>
               <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
             </div>
             <div class="cards__item">
               <img src="images/cards-question.png" class="cards__images" alt="Вопросы">
-              <h2 class="cards__title">Вопросы</h2>
+              <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
             </div>
             <div class="cards__item">
               <img src="images/cards-competence.png" class="cards__images" alt="Книги">
-              <h2 class="cards__title">Иллюзия компетентности</h2>
+              <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
             </div>
           </div>
@@ -68,8 +67,8 @@
           <h2 class="section-title">Видео на TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-          <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"></iframe>
           </div>
         </section>
         <section class="oakley">
@@ -140,7 +139,7 @@
           </div>
         </section>
         <section class="kaufman">
-          <div class="kaufman__triangle"></div>
+          <div class="rotation kaufman__triangle"></div>
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <p class="section-subtitle section-subtitle_theme_dark">От Джоша Кауфмана</p>
           <div class="table table_theme_dark">
